--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .menu li a:hover{
     text-decoration: underline rgb(255, 217, 0) 2px;
 }
@@ -27,4 +26,24 @@
 .info span {
     font-size: 12px;
     
+}
+.add-teams-matchday img{
+ object-fit: contain !important;
+}
+.fikstur .col-xl-4:hover{
+    background: linear-gradient(to right, rgb(0, 0, 0),rgb(235, 232, 50), rgb(236, 232, 1));
+	/* animation: gradient 5s backwards; */
+	background-size: 400% 400%;
+    color:white;
+}
+
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	100% {
+		background-position: 100% 50%;
+	}
+
 }
